--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "tourist-res-app",
   "version": "0.1.0",
   "description": "A tourist reservation web application",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
