--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "handlebars": "^4.0.11",
     "mysql": "^2.15.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {
     "eslint": "^4.13.1"
