--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "handlebars": "^4.0.11",
+    "handlebars-helpers": "^0.10.0",
     "mysql": "^2.15.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
