--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "handlebars": "^4.0.11",
     "handlebars-helpers": "^0.10.0",
     "mysql": "^2.15.0",
+    "nodemailer": "^4.4.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "random-js": "^1.0.8",
     "socket.io": "^2.0.4"
   },
   "devDependencies": {
