--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express-validator": "^4.3.0",
     "handlebars": "^4.0.11",
     "handlebars-helpers": "^0.10.0",
+    "mime": "^2.1.0",
+    "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "nodemailer": "^4.4.1",
     "passport": "^0.4.0",
